[gd_scene load_steps=2 format=3 uid="uid://iyt206rb01yj"]

[ext_resource type="Script" uid="uid://c5ipyb574afvt" path="res://Scripts/UpgradeCard.gd" id="1_bh2l2"]

[node name="UpgradeCard" type="PanelContainer"]
custom_minimum_size = Vector2(150, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -125.0
offset_right = 75.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bh2l2")

[node name="CardLayout" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 0

[node name="TitleLabel" type="Label" parent="CardLayout"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 0
text = "Title"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="CardLayout"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_filter = 0
text = "Description"
horizontal_alignment = 1
autowrap_mode = 3

[node name="IconTextureRect" type="TextureRect" parent="CardLayout"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_filter = 0
stretch_mode = 5

[node name="SelectButton" type="Button" parent="CardLayout"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "Choose"
